# advent_of_code

./: Cargo.toml  README.md  build.rs  run.sh
2024/day_01/: Cargo.toml
2024/day_03/: Cargo.toml
2024/day_05/: Cargo.toml
2024/day_07/: Cargo.toml
2024/day_14/src/: dump.txt
2024/day_17/src/: input.txt
2024/day_20/: Cargo.toml
src/: grid.rs  lib.rs  main.rs  parsing.rs  template_day
src/solutions/y2015/: 2015d02.rs  2015d04.rs  mod.rs  y2015d01.rs  y2015d02.rs  y2015d03.rs  y2015d04.rs  y2015d05.rs
src/solutions/y2016/: mod.rs
src/solutions/y2017/: mod.rs
src/solutions/y2018/: mod.rs
src/solutions/y2019/: mod.rs
src/solutions/y2020/: mod.rs
src/solutions/y2021/: mod.rs
src/solutions/y2022/: mod.rs
src/solutions/y2023/: mod.rs
src/solutions/y2024/: mod.rs  y2024d01.rs  y2024d02.rs  y2024d03.rs  y2024d04.rs  y2024d05.rs  y2024d06.rs  y2024d07.rs  y2024d08.rs  y2024d09.rs  y2024d10.rs
src/solutions/y2025/: mod.rs  y2025d01.rs  y2025d02.rs  y2025d03.rs  y2025d04.rs  y2025d05.rs  y2025d06.rs  y2025d07.rs  y2025d08.rs  y2025d09.rs
